--- a/ProjetoFinal/.project
+++ b/ProjetoFinal/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ProjetoFinal</name>
+	<name>projeto-final-poo-java</name>
 	<comment></comment>
 	<projects>
 	</projects>
